--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ web_modules/
 # .env.production.local
 # .env.local
 
+.DS_Store
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
