--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "jest": "^29.3.1",
+    "mockingoose": "^2.16.2",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
   }
